--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ Django==4.2.13
 django-appconf==1.0.6
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 pycparser==2.22
+PyJWT==2.8.0
 pyOpenSSL==24.1.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
